--- a/src/css/style.css
+++ b/src/css/style.css
@@ -247,3 +247,8 @@ input[type="search"]::-webkit-search-cancel-button {
 .button-secundario {
   @apply w-full items-center justify-center gap-3.5 rounded-lg border border-stroke bg-gray p-4 hover:bg-opacity-50 dark:border-strokedark dark:bg-meta-4 dark:hover:bg-opacity-50
 }
+
+.vertical-text {
+  writing-mode: vertical-rl;
+ transform: rotate(180deg);
+}
